# sre-masterclass.github.io

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  REPOSITORY_SETUP.md  SECURITY_FIXES_SUMMARY.md  audio-test.sh  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  chaos_scenario.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  documentation.yml  environment-test.yml  filter-private-content.yml  release.yml
0-1-chaos-simulator/: index.html
course/: README.md
course/planning/: complete_project_specification.md  sre-masterclass-spec.md  sre_masterclass_project_plan.md
course/production/: README.md  interactive-progress-summary.md  production-planning.md  progress-summary.md
course/video-scripts/: module-1-1-monitoring-taxonomies-outline.md  module-1-1-monitoring-taxonomies-script.md  module-1-1-technical-validation.md  module-1-2-instrumentation-outline.md  module-1-2-instrumentation-script.md  module-1-2-technical-validation.md  module-1-3-black-box-white-box-outline.md  module-1-3-black-box-white-box-script.md  module-1-3-technical-validation.md  module-1-4-advanced-patterns-outline.md  module-1-4-advanced-patterns-script.md  module-1-4-technical-validation.md  module-1-5-architecture-design-outline.md  module-1-5-architecture-design-script.md  module-1-5-technical-validation.md  module-2-1-slo-definition-outline.md  module-2-1-slo-definition-script.md  module-2-1-technical-validation.md  module-2-2-slo-calculator-burn-rate-simulator.html  module-2-2-statistical-validation.md  module-2-3-sli-implementation-comparison-tool.html  module-2-3-sli-implementation-outline.md  (+19 more)
entropy-dashboard/: Dockerfile  index.html  package.json  vite.config.js
entropy-engine/: Dockerfile  main.py  pyproject.toml  services.yml
entropy-engine/core/: config.py  docker_utils.py  scenarios.py  state.py
entropy-engine/scenarios/: 5-minute-latency-spike.yml  cascading-failure.yml  cpu-stress.yml  db-connection-exhaustion.yml  deployment-failure.yml  memory-exhaustion.yml  network-partition.yml  resource-starvation.yml
scripts/: audio-test.sh  davinci-resolve-config.json  git-push-all-safe.sh  git-push-all.sh  git-push-private.sh  git-push-public-safe.sh  git-push-public.sh  health-check.sh  obs-config.json  reset-environment.sh  setup-check.sh  setup-github-repo.sh
services/auth-api/: Dockerfile  main.py  models.py  pyproject.toml  security.py
services/ecommerce-api/: cache.py  database.py  main.py  models.py  pyproject.toml
services/ecommerce-api/core/: logging.py  tracing.py
services/payment-api/: Dockerfile  main.py  pyproject.toml
tests/: pyproject.toml
tests/integration/: test_mvp.py
tests/load/: k6.js
website/: .gitignore  Gemfile  _config.yml  index.md
(+254 files in other folders)
