[tool.poetry]
name = "sre-masterclass-tests"
version = "0.1.0"
description = "Integration tests for SRE Masterclass"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.4.1"
httpx = "^0.28.1"
redis = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
