[tool.poetry]
name = "auth-api"
version = "0.1.0"
description = "SRE Masterclass Auth API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
structlog = "^24.4.0"
prometheus-client = "^0.21.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.18"
prometheus-fastapi-instrumentator = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
