[project]
name = "payment-api"
version = "0.1.0"
description = ""
authors = [
    {name = "SRE Trainer",email = "sre.masterclass@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
